# Master_Control

master_control2/src/control/: CMakeLists.txt  package.xml
master_control2/src/control/launch/: main_launch.py
master_control2/src/control/src/: config.h  interface.cpp  interface.h  main.cpp  model_free.cpp  model_free.h  notes.txt  pid.cpp  pid.h  vehicle_interface.c  vehicle_interface.h  vehicle_interface_SOCKET.cpp  vehicle_interface_SOCKET.h
ros2_ws/src/control_package/: package.xml  setup.py
ros2_ws/src/control_package/control_package/: Odo_imu_pub.py  control_node.py  control_node_old.py  get_speed.py  get_steer.py  gpsfollow.py  ss_pub.py
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/nmea_navsat_driver/: CHANGELOG.rst  README.rst  package.xml  setup.cfg  setup.py
ros2_ws/src/nmea_navsat_driver/config/: nmea_serial_driver.yaml  nmea_socket_driver.yaml  nmea_tcpclient_driver.yaml
ros2_ws/src/nmea_navsat_driver/launch/: nmea_serial_driver.launch.py  nmea_socket_driver.launch.py  nmea_tcpclient_driver.launch.py
ros2_ws/src/nmea_navsat_driver/src/libnmea_navsat_driver/: checksum_utils.py  driver.py  parser.py
ros2_ws/src/nmea_navsat_driver/src/libnmea_navsat_driver/nodes/: nmea_serial_driver.py  nmea_socket_driver.py  nmea_tcpclient_driver.py  nmea_topic_driver.py  nmea_topic_serial_reader.py
ros2_ws/src/nmea_pub/: package.xml  setup.cfg  setup.py
ros2_ws/src/nmea_pub/nmea_pub/: SimulaGPSROS2.py  TESTE_FATEC.txt  nmea_navsatfix_pub.py  nmea_sentence_pub.py
